# verde

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md  package.json  rustfmt.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  feature-request.yml  feature_request.md
.github/workflows/: coverage.yml  deploy-docs.yml  release.yml  run-tests.yml
docs/: .gitignore  README.md  docs.md  eslint.config.mjs  index.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  main.css
docs/.vitepress/theme/components/: Homepage.vue  Layout.vue
docs/guide/: index.md  plugin.md  project-file-intro.md  project.md  quick-start.md
docs/project-file/: setup.md  syntax.md
docs/src/: index.md
docs/src/guide/: introduction.md  plugin.md  project.md  quick-start.md
plugin/: .gitignore  Main.luau  Network.luau  UI.luau  Verde.rbxmx  aftman.toml  azul.rbxmx  default.project.json  dev.project.json  foreman.toml  pesde-lock.yaml  pesde.yaml  plugin.rbxm  rokit.toml  stylua.toml  verde.yaml  wally.toml
plugin/src/: config.lua  config.luau  session.luau  store.lua  store.luau  theme.lua  theme.luau  types.lua  types.luau  verde.lua  verde.server.lua  verde.server.luau
plugin/src/session/: init.luau  init.session.lua
plugin/src/ui/: app.luau  menu.lua  toasts.lua  toasts.luau
plugin/src/ui/components/: button.lua  button.luau  icon.lua  icon.luau  input.lua  input.luau  input_group.lua  input_group.luau  logo.lua  rounded.luau  tab.lua  tab.luau  toast.lua  toast.luau  version.lua  version.luau
plugin/src/ui/composables/: text_size.luau  timestamp.luau  useChanged.luau  useLerp.luau  useRoundness.luau  useTextSize.luau
plugin/src/ui/panels/: home.lua  home.luau  settings.luau
plugin/src/ui/views/: settings.luau  sync.luau
plugin/storybook/: app.story.luau  story.luau  util.luau  verde.storybook.luau
plugin/storybook/button/: button.story.luau
plugin/storybook/components/: icon.story.luau  version.story.luau
plugin/storybook/components/button/: primary-button.story.luau
plugin/storybook/components/input/: input-readonly.story.luau  input-value.story.luau  input.story.luau
plugin/storybook/components/input_group/: input_group.story.luau
plugin/storybook/components/tab/: multi-tab.story.luau  (+1 more)
src/: lib.rs  main.rs  rustfmt.toml
src/adapters/: mod.rs  rojo.rs
src/api/: mod.rs  sync.rs
src/cli/: convert.rs  init.rs  mod.rs  serve.rs  sourcemap.rs
src/core/: mod.rs  project.rs  session.rs  sourcemap.rs  watcher.rs
src/core/node/: base.rs  csv_node.rs  mod.rs  script_node.rs  yaml_node.rs
src/core/payload/: mod.rs  transform.rs
src/core/project/: mod.rs  node.rs  node_iter.rs
tests/: project.rs  tests.rs
tests/project/: mod.rs
(+2 files in other folders)
