[package]
name = "verde"
version = "0.1.0"
authors = ["quantix <me@quantix.dev>"]
edition = "2021"
description = "Syncs file systems between roblox studio and your editor of choice"
repository = "https://github.com/quantix-dev/verde"
license = "MPL-2.0"
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[dev-dependencies]
tempfile = "3.6.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4.14"
notify-debouncer-full = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.36", features = ["rt-multi-thread"] }
warp = "0.3"

[profile.release]
strip = true
