[package]
name = "verde"
version = "0.1.0-beta"
authors = ["quantix <me@quantix.dev>"]
rust-version = "1.70"
edition = "2021"
description = "Synchronise files between Roblox Studio and your editor of choice"
documentation = "https://verde.quantix.dev/guide/introduction"
homepage = "https://verde.quantix.dev"
repository = "https://github.com/verde-rbx/verde"
license = "MPL-2.0"
license-file = "LICENSE.txt"
categories = ["command-line-utilities", "development-tools"]
exclude = ["/docs/**", "/tests/**", "/examples/**"]

[dependencies]
notify = { version = "6.1", default-features = false, features = [
  "macos_kqueue",
] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
notify-debouncer-full = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
warp = "0.3"

[dev-dependencies]
tempfile = "3.12"

[features]
darklua = []
typescript = []

[profile.release]
strip = true
